--- a/sections/text-and-image.liquid
+++ b/sections/text-and-image.liquid
@@ -278,7 +278,7 @@
       "default": "Image with text"
     },
     {
-      "type": "richtext",
+      "type": "liquid",
       "id": "text",
       "label": "t:sections.text-and-image.settings.text.label",
       "default": "<p>Pair large text with an image to tell a story, explain a detail about your product, or describe a new promotion.</p>"
