--- a/sections/text-and-image.liquid
+++ b/sections/text-and-image.liquid
@@ -272,7 +272,7 @@
       "label": "t:sections.text-and-image.settings.subtitle.label"
     },
     {
-      "type": "text",
+      "type": "html",
       "id": "title",
       "label": "t:sections.text-and-image.settings.title.label",
       "default": "Image with text"
