--- a/sections/background-image-text.liquid
+++ b/sections/background-image-text.liquid
@@ -69,7 +69,7 @@
       "label": "t:sections.background-image-text.settings.subtitle.label"
     },
     {
-      "type": "text",
+      "type": "liquid",
       "id": "title",
       "label": "t:sections.background-image-text.settings.title.label",
       "default": "Large image with text box"
