--- a/sections/background-image-text.liquid
+++ b/sections/background-image-text.liquid
@@ -45,7 +45,7 @@
             <h2 class="h1 appear-delay{% cycle '','-1','-2','-3','-4' %}">{{ section.settings.title }}</h2>
           {%- endif -%}
           {%- if section.settings.text != blank -%}
-            <div class="rte appear-delay{% cycle '','-1','-2','-3','-4' %}">{{ section.settings.text.value }}</div>
+            <div class="rte appear-delay{% cycle '','-1','-2','-3','-4' %}">{{ section.settings.text }}</div>
           {%- endif -%}
           {%- if section.settings.button_label != blank and section.settings.button_link != blank -%}
             <a href="{{ section.settings.button_link }}" class="btn appear-delay{% cycle '','-1','-2','-3','-4' %}">
@@ -75,7 +75,7 @@
       "default": "Large image with text box"
     },
     {
-      "type": "richtext",
+      "type": "liquid",
       "id": "text",
       "label": "t:sections.background-image-text.settings.text.label",
       "default": "<p>Pair large text with a full-width image to draw attention to an important detail of your brand or product line.</p>"
