--- a/sections/background-image-text.liquid
+++ b/sections/background-image-text.liquid
@@ -75,7 +75,7 @@
       "default": "Large image with text box"
     },
     {
-      "type": "richtext",
+      "type": "liquid",
       "id": "text",
       "label": "t:sections.background-image-text.settings.text.label",
       "default": "<p>Pair large text with a full-width image to draw attention to an important detail of your brand or product line.</p>"
